<resources>
    <string name="app_name">THE MISS</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1502622856621347</string>
    <string name="select_photo">Select Photo</string>
    <string name="confirm_deleting">Confirm Deleting</string>
    <string name="are_you_sure_delete">Are you sure to delete this picture?</string>
    <string name="date">d</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="menu_the_contest">THE CONTEST</string>
    <string name="menu_prizes">Prizes</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_photo_sampler">Photo sampler</string>
    <string name="menu_rules_and_privacy">Rules and Privacy</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_help">HELP</string>
    <string name="menu_faq">Faq</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_account">ACCOUNT</string>
    <string name="menu_import_pictures">IMPORT PICTURES</string>
    <string name="menu_invite_friends">INVITE FRIENDS</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_notifications">NOTIFICATIONS</string>
    <string name="menu_logout">Logout</string>
    <string name="home_heading_only_selfie">The only Social Contest that\n allow you to be famous</string>
    <string name="home_heading_are_you_mail">ARE YOU BOY?</string>
    <string name="home_heading_vote_your_miss">VOTE YOUR MISS</string>
    <string name="home_last_pictures">LAST\nPICTURES</string>
	<string name="home_miss_of_the_month">MISS OF\nTHE MONTH</string>
	<string name="home_the_winners">THE\nWINNERS</string>
	<string name="home_the_winners_text1">The Miss contest has just started.</string>
	<string name="home_the_winners_text2">Would you like to be the\nfirst Miss?</string>
	<string name="home_the_winners_text3">WIN THE IPHONE 5s!</string>
	<string name="home_the_winners_text4">Invite your friends!</string>
	<string name="if_you_male">If you are a male</string>
	<string name="signup_and_vote">SIGNUP AND VOTE YOUR MISS</string>
	<string name="vote">Vote</string>
	<string name="share">Share</string>
	<string name="report_inappropriate">Report Inappropriate</string>
	<string name="cancel">Cancel</string>
	<string name="miss">MISS</string>
	<string name="home_invite">INVITE</string>
	<string name="report_success_message">Thank you, this picture has been reported to the staff.</string>
	<string name="share_facebook">Share on Facebook</string>
	<string name="share_whatsapp">Share on Whatsapp</string>
	<string name="share_to">Share to...</string>
	<string name="shared_successfully">Shared successfully!</string>
	<string name="sharing_cancelled">Sharing cancelled.</string>
	<string name="share_message_first">Also</string>
	<string name="share_message_middle">is on The Miss!\n </string>
	<string name="share_message_end">Vote and help her to become Famous!\n Visit: www.themiss.tv and download the App</string>
	<string name="login_title">Login</string>
	<string name="login_login">LOGIN</string>
	<string name="login_signup">SIGNUP</string>
	<string name="mail_login">Mail Login</string>
	<string name="login_forgot_password">Forgot Password</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="login_with_facebook">Login with Facebook</string>
	<string name="login_with_instagram">Login with Instagram</string>
	<string name="become_famous">Do you want to become famous?\nSign up!</string>
	<string name="signup_title">Mail Signup</string>
	<string name="signup_male">MALE</string>
	<string name="signup_female">FEMALE</string>
	<string name="signup_agree_message">By signing up, you agree to our</string>
	<string name="signup_terms_and_conditions">terms and conditions</string>
	<string name="username">User Name</string>
	<string name="we_do_not_post_anything">We don\'t post anything to Facebook.</string>
	<string name="password_reset_title">Password Reset</string>
	<string name="password_reset">PASSWORD RESET</string>
	<string name="problems_get_in_touch">Problems? Get in touch</string>
	<string name="import_title">Import</string>
	<string name="facebook_album">Facebook Album</string>
	<string name="connected_as">Connected As </string>
	<string name="facebook_friends">Facebook Friends</string>
	<string name="camera">Camera</string>
	<string name="upload_photo">Upload photo</string>
	<string name="take_picture">Take picture</string>
	<string name="gallery">Gallery</string>
	<string name="uploading">Uploading...</string>
	<string name="image_uploaded_success">Image uploaded successfully!</string>
	<string name="adjust">ADJUST</string>
	<string name="invite_title">Invite</string>
	<string name="invite_contacts">Contacts</string>
	<string name="request_cancelled">Request cancelled.</string>
	<string name="invite_whatsapp">Invite with Whatsapp</string>
	<string name="invite_with">Invite with...</string>
	<string name="invite_message">DOWNLOAD The Miss App or go to themiss.tv\n\n
	    WOMAN: upload your pictures and become famous!\n
	    MAN: invite your dream\'s girl and support your favorite</string>
	<string name="notification_title">Notifications</string>
	<string name="has_voted_one">has voted one of your</string>
	<string name="has_shared_one">has shared one of your</string>
	<string name="has_commented_one">has commented one of your</string>
	<string name="has_commented_own">has commented one of her own</string>
	<string name="posted_new">have posted new</string>
    <string name="photo">Photo</string>
	<string name="follow_me">FOLLOW ME</string>
	<string name="following">FOLLOWING</string>
	<string name="edit">EDIT</string>
	<string name="position">POSITION</string>
	<string name="votes">VOTES</string>
    <string name="photos">Photos</string>
	<string name="followers">FOLLOWERS</string>
	<string name="comment">Comment</string>
	<string name="selfie">SELFIE</string>
	<string name="voted">VOTED</string>
	<string name="followed">FOLLOWED</string>
	<string name="followed_successfully">Followed successfully.</string>
	<string name="load_more">Load more...</string>
	<string name="most_active_users">FAN RANKING</string>
	<string name="top_positions">Ranking is determined by total sum of shares</string>
	<string name="is_following_you"> is following you.</string>
	<string name="comment_title">Comments</string>
	<string name="send">SEND</string>
	<string name="comment_saved_successfully">Comment saved successfully.</string>
	<string name="related_articles">Related articles</string>
	<string name="prizes">Prizes</string>
	<string name="prizes_text">Each month in this section you will find the prizes.</string>
	<string name="prizes_footer_text">If you already have the prize, you can select another one of equal value.</string>
	<string name="photo_sampler">Photo Sampler</string>
	<string name="photo_sampler_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis dui tortor, eget vehicula sem sollicitudin non. Aenean tortor felis, pellentesque et ultricies eu, condimentum quis elit. MLorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis dui tortor, eget vehicLorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis dui tortor, eget vehicula sem sollicitudin non. Aenean tortor felis, pellentesque et ultricies eu, condimentum quis elit. Mula sem sollicitudin non. Aenean tortor felis, pellentesque et ultricies eu, condimentum quis elit. M</string>
	<string name="logout_question">Are you sure to\nlogout?</string>
	<string name="logout_title">Logout</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="deactivate">Deactivate</string>
	<string name="deactivate_question">Are you sure to\ndeactivate?</string>
	<string name="settings_title">Settings</string>
	<string name="cover">Cover</string>
	<string name="profile_photo">Profile Photo</string>
	<string name="change">Change</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="city">City</string>
	<string name="mobile_number">Mobile Number</string>
	<string name="description">Description</string>
	<string name="new_password">New Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="add_social_network">Add social network</string>
	<string name="facebook">Facebook</string>
	<string name="instagram">Instagram</string>
	<string name="twitter">Twitter</string>
	<string name="whatsapp">Whatsapp</string>
	<string name="save">SAVE</string>
	<string name="deactivate_account">Deactivate Account</string>
	<string name="activate_account">Activate Account</string>
	<string name="upload_pictures_with">Upload pictures with:</string>
	<string name="user_information_saved">User information saved successfully.</string>
	<string name="saving">Saving...</string>
	<string name="admin">Admin</string>
	<string name="flagged">flagged</string>
	<string name="flagged_pictures">Flagged Pictures</string>
	<string name="delete">Delete</string>
	<string name="contacts">Contacts</string>
	<string name="name_surname">Name Surname</string>
	<string name="Message">Message</string>
	<string name="report_problem">Report a problem</string>
	<string name="send_suggestion">Send a suggestion</string>
	<string name="business_press">Business/Press</string>
	<string name="tutorial_text">Get your inspiration from videos and photos of the Testimonial 2014 and... snap your PEFFECT SELFIE!!</string>
	<string name="faq_faq">FAQ</string>
	<string name="faq_topic1">1) What is themiss.tv?</string>
	<string name="faq_content1">The Miss is the social contest created in order to rebuild the fashion and show business, thanks to an innovative tool for the selection of participants.</string>
	<string name="faq_topic2">2) Who can apply for The Miss?</string>
	<string name="faq_content2">SHE: should you are aged between 16 and 35 years old, of any nationality and origin. No physical requirements related to size or height are requested or compromise the participation. 
								\n\nHE: You can participate at The Miss by voting, sharing and commenting your favourite photos. In addition, you can invite all the girls you would like to see them participate in the contest.
	</string>
	<string name="faq_topic3">3) How can I upload the pictures?</string>
	<string name="faq_content3">You can upload your pictures clicking on the button + in the menu in the high part of the screen and you can import them from your personal account on Facebook and Instagram or from your smartphone.</string>
	<string name="faq_topic4">4) Which kind of pictures can I upload?</string>
	<string name="faq_content4">You can be inspired by the Photo Sampler on the web site. You must give priority to Selfie, but you can also upload a picture of yourself taken by another person. 
								\n\nIt is important that no professional photos will be uploaded. In order to guarantee more transparency to the platform, we ask you to take a picture with a paper containing your name and the writing “The Miss”. 
								\n\nYou can upload as much photos as you want, there are no amount limits.
	</string>
	<string name="faq_topic5">5) What do I obtain if I participate to the contest?</string>
	<string name="faq_content5">Posting your pictures frequently (4-5 times per day) and sharing them with your friends you will create your fame starting from nothing.
	    						\n\nSpread the news as much as possible and increase the number of your Fans!
	    						\n\nThanks to The Miss you will be able to create your photo book free of charge, because for the first time it’s up to you to choose how to look, how many times you want to appear and, above all, from your favourite place.</string>
	<string name="faq_topic6">6) What do I win?</string>
</resources>