<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/menu_tutorial"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/tutorial_text" />

    <WebView
        android:id="@+id/wv_italian_tutorial"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#DDDDDD" />

    <WebView
        android:id="@+id/wv_tutorial"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        android:background="#DDDDDD" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/photo_sampler"
        android:textSize="20dp" />

</LinearLayout>