<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <Button
            android:id="@+id/btn_signup_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_alpha_bg_selector"
            android:drawableLeft="@drawable/left_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/signup_title"
            android:textSize="18dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#BBBBBB" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_crown" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/login_themiss" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/login_signup"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_mail" />

            <EditText
                android:id="@+id/et_signup_username"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:ems="10"
                android:hint="@string/username"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18dp" >

            </EditText>

            <EditText
                android:id="@+id/et_signup_password"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_signup_confirm_password"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/layout_signup1"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:checked="true"
                        android:text="@string/signup_female"
                        android:textColor="@android:color/white"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="@string/signup_male"
                        android:textColor="@android:color/white"
                        android:textSize="15dp" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/signup_agree_message"
                android:textColor="#DFDFDF"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/tv_signup_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_alpha_bg_selector"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/signup_terms_and_conditions"
                android:textColor="@android:color/white"
                android:textSize="13dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_signup_signup"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_border_btn_bg"
                android:text="@string/login_signup"
                android:textColor="@android:color/white"
                android:textSize="28dp" />

            <Button
                android:id="@+id/btn_signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_alpha_bg_selector"
                android:padding="10dp"
                android:text="@string/login_login"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_signup_facebook"
                android:layout_width="260dp"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/facebook_login_btn"
                android:paddingLeft="40dp"
                android:text="@string/login_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_signup_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_alpha_bg_selector"
                android:padding="10dp"
                android:text="@string/login_forgot_password"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
