<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <Button
            android:id="@+id/btn_login_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_alpha_bg_selector"
            android:drawableLeft="@drawable/left_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/login_title"
            android:textSize="18dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#BBBBBB" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background" >

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_crown" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/login_themiss" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/become_famous"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_login_facebook"
                android:layout_width="260dp"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/facebook_login_btn"
                android:paddingLeft="40dp"
                android:text="@string/login_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_alpha_bg_selector"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/mail_login"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/we_do_not_post_anything"
                android:textColor="#DFDFDF"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/signup_agree_message"
                android:textColor="#DFDFDF"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btn_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_alpha_bg_selector"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/signup_terms_and_conditions"
                android:textColor="@android:color/white"
                android:textSize="13dp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
