<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/import_menubg" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/bottom_arrow" />

        <Spinner
            android:id="@+id/spinner_menu_settings_language"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_menu_settings_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/import_menubg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="15dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_menu_settings_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/import_menubg"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/et_settings_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/import_menubg"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_menu_settings_save"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/menu_settings_save_bg"
        android:text="@string/save"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btn_menu_settings_logout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/menu_settings_save_bg"
        android:text="@string/menu_logout"
        android:textSize="18dp" />

</LinearLayout>